# qualbench

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TODO.md  Taskfile.yml  app.doql.css  app.doql.less  goal.yaml  index.html  planfile.yaml  pyproject.toml  pyqual.yaml  server.py
.data/: results.json
.github/workflows/: ci.yml  docker-push.yml  publish-pypi.yml  test-action.yml
.pyqual/: llx_history.jsonl  pipeline.db  runtime_errors.json
.taskill/: state.json
action/: Dockerfile  action.yml  entrypoint.sh  example-workflow-prollama.yml
articles/: README.md  competitive-landscape-q2-2026.md  cost-per-mergeable-pr.md  prollama-status.md  pyqual-status.md  qualbench-status.md  security-regressions-ai-coding.md  softreck-ecosystem-overview.md  taskinity-concept.md
content/: launch-content.md
dataset/: qualbench-v0.json  qualbench-v1.json
docs/: README.md  api.md  development-plan-v2.md  methodology.md  publishing.md  reproducibility.md  schema.md
project/: README.md  analysis.toon.yaml  calls.mmd  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  map.toon.yaml  project.toon.yaml  prompt.txt  validation.toon.yaml
qualbench/: __init__.py  api.py  cli.py  dataset.py  supervisor.py
qualbench/benchmark/: __init__.py
qualbench/evaluation/: __init__.py
qualbench/runners/: __init__.py
qualbench/utils/: repos.py
reviews/: review_template.json
runners/: aider_runner.py  cline_runner.py  copilot_runner.py  openhands_runner.py  prollama_runner.py  template.py
scripts/: evaluate.py  generate_dataset_v1.py  score.py
tests/: test_api.py  test_core.py
www/: index.html
