[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qualbench"
version = "0.2.1"
description = "CI for AI-generated code — measures production readiness, not just correctness"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Softreck", email = "info@softreck.com" },
    {name = "Tom Sapletta", email = "tom@sapletta.com"},
]
keywords = ["benchmark", "ai", "code-quality", "ci", "quality-gates", "swe-bench"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "click>=8.1",
    "radon>=6.0",
    "bandit>=1.7",
    "ruff>=0.4",
    "GitPython>=3.1",
    "fastapi>=0.100",
    "requests>=2.31",
    "uvicorn>=0.23",
    "pydantic>=2.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-cov>=5.0", "httpx>=0.25"]
all = ["qualbench[test]"]

[project.scripts]
qualbench = "qualbench.cli:main"

[project.urls]
Homepage = "https://qualbench.com"
Repository = "https://github.com/semcod/qualbench"
Documentation = "https://github.com/semcod/qualbench/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["qualbench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
